--- a/Proyecto-Final/frontend/src/index.css
+++ b/Proyecto-Final/frontend/src/index.css
@@ -1,4 +1,4 @@
-html, body {
+html, body, #root {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -13,6 +13,8 @@ main {
   margin: 0;
   background-color: black;
   min-height: 100vh;
+  width: 100%;
+  max-width: 100vw; /*cambie esto y se agrando el contenedor, peor quiero que se adapte al tamaño de la pantalla de forma automatica*/
   display: flex;
   justify-content: center;
   align-items: flex-start;
