--- a/frontend/src/Component/Menu/Menu.css
+++ b/frontend/src/Component/Menu/Menu.css
@@ -1,6 +1,6 @@
 .menu-container {
-  background-color: #111;
-  color: #fff;
+  background-color: white;
+  color: black;
   font-family: 'Segoe UI', sans-serif;
   max-width: 700px;
   margin: 3rem auto;
