--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,7 +11,7 @@ html, body, #root {
 main {
   padding: 0;
   margin: 0;
-  background-color: black;
+  background-color: #212830;
   min-height: 100vh;
   width: 100%;
   max-width: 100vw; /*cambie esto y se agrando el contenedor, peor quiero que se adapte al tamaño de la pantalla de forma automatica*/
