--- a/frontend/src/Component/CargarIncidente/CargarIncidente.css
+++ b/frontend/src/Component/CargarIncidente/CargarIncidente.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   background-color: #111;
   font-family: 'Segoe UI', sans-serif;
   height: 100vh;
@@ -6,15 +6,15 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
 
 .form-incidente {
   background-color: #1d1d1d;
   border-top: 5px solid #d52b1e;
   padding: 2rem 2.5rem;
   border-radius: 0 0 10px 10px;
-  max-width: 700px;
-  width: 90%;
+  /* max-width: auto; */
+  width: 100%;
   box-sizing: border-box;
   color: #fff;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.7);
@@ -81,3 +81,4 @@ body {
   margin-left: -0.5rem;
   margin-right: -0.5rem;
 }
+
