--- a/frontend/src/Component/Usuario/ConsultarUsuario/ConsultarUsuario.css
+++ b/frontend/src/Component/Usuario/ConsultarUsuario/ConsultarUsuario.css
@@ -19,9 +19,9 @@ body {
 .table,
 .table thead th,
 .table tbody td {
-  background-color: #2c2c2c;
+  background-color: grey;
   color: white;
-  border-color: #dc3545;
+  border-color: black;
 }
 
 .form-control:focus {
