--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@ html, body, #root {
   padding: 0;
   width: 100%;
   height: 100%;
-  font-family: 'Segoe UI', sans-serif;
+  font-family: "Work Sans", "Noto Sans", sans-serif;
   background-color: #111;
   overflow-x: hidden;
 }
@@ -11,7 +11,7 @@ html, body, #root {
 main {
   padding: 0;
   margin: 0;
-  background-color: #212830;
+  background-color: #a0a0a0;
   min-height: 100vh;
   width: 100%;
   max-width: 100vw; /*cambie esto y se agrando el contenedor, pero quiero que se adapte al tamaño de la pantalla de forma automatica*/
