--- a/frontend/src/Component/Login/Login.css
+++ b/frontend/src/Component/Login/Login.css
@@ -1,5 +1,6 @@
 .form-login {
   background-color: white;
+  border: 2px solid black;
   border-top: 5px solid #d52b1e;
   border-radius: 10px;
   padding: 3.5rem; /* más espacio interno */
@@ -11,20 +12,29 @@
 
 .form-label {
   font-weight: 600;
-  font-size: 1rem; /* fuente más grande */
+  font-size: 1rem;
 }
 
 .form-control {
-  background-color: #fff;
-  border: 1px solid #444;
+  background-color: white;
+  border: 2px solid black;
   color: #000;
   font-size: 1rem;
-  height: 50px; /* altura más cómoda */
+  height: 50px;
   padding: 0.75rem;
 }
 
 .form-control::placeholder {
   color: #aaa;
+}
+
+.form-control:focus,
+.form-select:focus {
+  background-color: white;
+  border-color: #d52b1e;
+  outline: none;
+  box-shadow: 0 0 8px #d52b1e;
+  color: black;
 }
 
 .btn-danger {
@@ -58,3 +68,5 @@
   color: #cd2f1a;
   text-decoration: underline;
 }
+
+
