--- a/frontend/src/Component/Login/Login.css
+++ b/frontend/src/Component/Login/Login.css
@@ -11,17 +11,17 @@
 }
 
 .form-label {
-  font-weight: 600;
-  font-size: 1rem;
+  font-weight: 500;
+  color: #fff;
 }
 
-.form-control {
+.form-control,
+.form-select {
   background-color: white;
-  border: 2px solid black;
-  color: #000;
-  font-size: 1rem;
-  height: 50px;
-  padding: 0.75rem;
+  border: 1px solid #444;
+  color: #fff;
+  padding: 0.5rem 0.75rem;
+  border-radius: 0.375rem;
 }
 
 .form-control::placeholder {
