--- a/frontend/src/Component/Login/Login.css
+++ b/frontend/src/Component/Login/Login.css
@@ -11,13 +11,18 @@
 }
 
 .form-label {
-  font-weight: 500;
+  font-weight: 600 !important;
   color: #fff;
 }
 
+.form-control {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  color: #000 !important;
+}
 .form-control,
 .form-select {
-  background-color: white;
+  background-color: white !important;
   border: 1px solid #444;
   color: #fff;
   padding: 0.5rem 0.75rem;
@@ -30,11 +35,11 @@
 
 .form-control:focus,
 .form-select:focus {
-  background-color: white;
-  border-color: #d52b1e;
-  outline: none;
-  box-shadow: 0 0 8px #d52b1e;
-  color: black;
+  background-color: white !important;
+  border-color: #d52b1e !important;
+  outline: none !important;
+  box-shadow: 0 0 8px #d52b1e !important;
+  color: black !important;
 }
 
 .btn-danger {
