--- a/frontend/src/Component/Guardia/RegistrarGuardia/RegistrarGuardia.css
+++ b/frontend/src/Component/Guardia/RegistrarGuardia/RegistrarGuardia.css
@@ -45,3 +45,36 @@
   font-size: 0.8rem;
   line-height: 1;
 }
+
+/* Estilo para el contenedor de los botones y los tooltips */
+
+
+
+
+/* Tooltip */
+.tooltip-container {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip {
+  visibility: hidden;
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 12px;
+  z-index: 1;
+  white-space: nowrap;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.tooltip-container button:disabled:hover + .tooltip {
+  visibility: visible;
+  opacity: 1;
+}
