--- a/frontend/src/Component/DisenioFormulario/DisenioFormulario.css
+++ b/frontend/src/Component/DisenioFormulario/DisenioFormulario.css
@@ -431,3 +431,52 @@ body {
   color: black !important;
 }
 
+
+
+.react-time-picker__wrapper {
+  border: 1px solid #dc3545;
+  border-radius: 0.375rem;
+  padding: 6px 12px;
+  background-color: #ffffff;
+  color: #000000;
+  font-size: 1rem;
+}
+
+.react-time-picker__inputGroup input {
+  background-color: #ffffff;
+  color: #000000;
+  border: none;
+  width: 2ch;
+  font-size: 1rem;
+}
+
+.react-time-picker__clock {
+  z-index: 9999 !important;
+}
+
+.react-time-picker__inputGroup__divider {
+  color: black;
+}
+
+.react-time-picker__clear-button,
+.react-time-picker__clock-button {
+  display: none;
+}
+
+.selector-rojo {
+  border: 1px solid #dc3545 !important;
+  background-color: #fff !important;
+  color: #000 !important;
+  border-radius: 0.375rem;
+}
+
+.selector-rojo:focus {
+  border-color: #dc3545 !important;
+  box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25) !important;
+}
+
+.selector-rojo option:checked,
+.selector-rojo option:hover {
+  background-color: #dc3545 !important;
+  color: #fff !important;
+}
