--- a/frontend/src/Component/Menu/Menu.css
+++ b/frontend/src/Component/Menu/Menu.css
@@ -210,3 +210,20 @@ main.container {
   color: #ccc;
   font-size: 1.1rem;
 }
+
+.accordion-button::after {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-size: 1rem;
+  content: "";
+  width: 1rem;
+  height: 1rem;
+  margin-left: auto;
+  transition: transform 0.2s ease-in-out;
+  pointer-events: none; /* ✅ Esto permite que el clic llegue al botón */
+}
+
+.accordion-button:not(.collapsed)::after {
+  transform: rotate(180deg);
+}
+
