--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,9 +2,8 @@ html, body, #root {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  height: auto;
   font-family: "Segoe UI", "Noto Sans", sans-serif;
-  /* background-color: #111; */
   overflow-x: hidden;
 }
 
