--- a/frontend/src/Component/DisenioFormulario/DisenioFormulario.css
+++ b/frontend/src/Component/DisenioFormulario/DisenioFormulario.css
@@ -515,3 +515,7 @@ body {
 .fc-timegrid-event:hover {
   background-color: #d52b1e !important; /* Rojo actual más oscuro */
 }
+
+.modal-backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
+}
