se agrego una query responsive

--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -307,3 +307,11 @@ body{
     margin-right: 0;
   }
 }
+
+/* =============================
+   Responsive
+============================= */
+@media (max-width: 576px){
+  .btn-short, .btn-medium { 
+    width: auto; }
+}
