fix tamaño imput gestionar guardias

--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -260,6 +260,10 @@ body{
   font-size:0 !important; padding:0 !important;
 }
 
+.time-select { 
+  min-width: 40%; 
+}
+
 /* Tooltip dinámico (fullcalendar) */
 .tooltip-dinamico{
   position: fixed;
